# margium

./: Cargo.toml
src/: annotations.rs  engine.rs  main.rs  ui.rs
src/ui/: button_event.rs  main_content.rs  popover_menu.rs  sidebar.rs  toolbar.rs
src/ui/sidebar/: annotation.rs  mod.rs  outline.rs  search.rs  thumbnail.rs
